syntax = "proto3";

option go_package = "github.com/tobiasbrandy/grpc_examples/helloworld";
option java_multiple_files = true;
option java_package = "com.tobiasbrandy.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Repeat the greeting many times
  rpc SayHelloRepeated (HelloRequest) returns (stream HelloReply) {}

  // Sends many greeting in one message
  rpc SayHelloMany (stream HelloRequest) returns (HelloReply) {}

  // Sends many greeting in multiple messages
  rpc SayHelloManyMany (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
